# rca-api

./: .gitignore  Makefile  PLANS.md  README.md  go.mod  go.sum
tools/ai-orchestrator/: .env.example  README.md  pyproject.toml
tools/ai-orchestrator/ai_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tools/ai-orchestrator/orchestrator/: __init__.py  constants.py  evidence_plan.py  graph.py  main.py  mcp_client.py  state.py  tool_registry.py  tools_rca_api.py
tools/ai-orchestrator/orchestrator/daemon/: __init__.py  (+5 more)
tools/ai-orchestrator/tests/: test_audit.py  test_canonical_names.py  test_capability_validation.py  test_concurrent_execution.py  test_contract_cross_layer.py  test_degrade_reasons.py  test_dynamic_tool_execution.py  test_evidence_plan.py  test_fc_adapter.py  test_graph_fc_agent.py  test_graph_phasee.py  test_graph_template_registry.py  test_health_metrics.py  test_incident_context.py  test_llm_logging.py  test_mcp_http_provider.py  test_mcp_server_loader.py  test_middleware.py  test_nodes_agents.py  test_nodes_finalize.py  test_nodes_platform.py  test_nodes_router.py  test_observability_phasei.py  test_runtime_sdk.py  test_session_patch_retry.py  test_settings_validation.py  test_skill_coordinator.py  test_skill_prompt_tools.py  test_skill_script.py  test_skills_contract.py  test_skills_runtime.py  test_strategy_resolve_phasel1.py  test_template_registry_phasel0.py  test_tool_catalog.py  test_tool_registry.py  test_toolset_chain_phasej.py  test_toolset_registry_phaseg.py  test_toolset_registry_phaseh.py  test_toolset_resolve_chain_phasek.py
(+628 files in other folders)
